edition = "2023";

package wayplatform.connect.tachograph.datadictionary.v1;

import "wayplatform/connect/tachograph/datadictionary/v1/full_card_number.proto";
import "wayplatform/connect/tachograph/datadictionary/v1/generation.proto";

// Corresponds to the `FullCardNumberAndGeneration` data type in the Data Dictionary, Section 2.74.
//
// ASN.1 Specification:
//
//     FullCardNumberAndGeneration ::= SEQUENCE {
//         fullcardNumber FullCardNumber,
//         generation Generation
//     }
message FullCardNumberAndGeneration {
  // The full card number.
  //
  // ASN.1 Specification:
  //
  //     FullCardNumber ::= SEQUENCE { ... }
  FullCardNumber full_card_number = 1;

  // The generation of the card.
  //
  // ASN.1 Specification:
  //
  //     Generation ::= INTEGER (0..255)
  Generation generation = 2;
}
